# backend_api_projeto

./: .env  .env.original  .gitignore  Diagrama ER.pgerd  README.md  pyproject.toml  railway.json  relatorio_projeto_pratico.md  scff_script_postgresql_usuario_relacionado.sql  sonar-project.properties
.ruff_cache/0.11.5/: 2752318075519474023  5231652253313408517
backend_fastapi/: app.py  database.py  security.py
backend_fastapi/router/: adminRouter.py  dividasRouter.py  emailRouter.py  gastoRouter.py  investimentoRouter.py  metaRouter.py  movimentacaoRouter.py  orcamentoMensalRouter.py  patrimonioRouter.py  resumoFinanceiroRouter.py  usuarioRouter.py
backend_fastapi/schema/: Enums.py  IMPrendaSchema.py  adminSchema.py  dividasSchema.py  documentoSchema.py  emailSchema.py  gastoMensalSchema.py  investimentoSchema.py  metaSchema.py  movimentacaoSchema.py  orcamento_mensal.py  patrimonioSchema.py  resumoFinanceiroSchema.py  usuarioSchema.py
tests/: conftest.py  test_app.py  test_crud.py  test_direct.py
