[tool.poetry]
name = "backend-fastapi"
version = "0.1.0"
description = "Projeto para faculdade"
authors = ["João Martins <joaommn1998@gmail.com>"]
packages = [{ include = "backend_fastapi" }]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
fastapi = { version = ">=0.115.12,<0.116.0", extras = ["all"] }
taskipy = ">=1.14.1,<2.0.0"
ruff = ">=0.11.5,<0.12.0"
pydantic = ">=2.11.3,<3.0.0"
asyncpg = ">=0.30.0,<0.31.0"
sqlalchemy = ">=2.0.40,<3.0.0"
pyjwt = ">=2.10.1,<3.0.0"
pwdlib = { version = ">=0.2.1,<0.3.0", extras = ["argon2"] }
tzdata = ">=2025.2,<2026.0"
fastapi-mail = ">=1.4.2,<2.0.0"

[tool.poetry.dev-dependencies]
ruff = ">=0.11.5,<0.12.0"
taskipy = ">=1.14.1,<2.0.0"

[tool.taskipy.tasks]
run = "uvicorn backend_fastapi.app:app --host 0.0.0.0 --port 8000"
lint = "ruff check . && ruff check . --diff"
format = "ruff check . --fix && ruff format ."

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"